--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,50 @@
+/* CSS RESET */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+#root,
+#__next {
+  isolation: isolate;
+}
+
 body {
   font-family: system-ui;
   background-color: #f8f8fb;
@@ -10,6 +57,11 @@ h3 {
   letter-spacing: -0.25px;
   text-align: left;
   color: #7c5dfa;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 input,
