--- a/components/invoice-add/style.css
+++ b/components/invoice-add/style.css
@@ -40,6 +40,42 @@
   }
 }
 
+.btns {
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  a {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+  }
+}
+
+.btns .filter {
+  display: none;
+  position: absolute;
+  top: 130px;
+  right: 155px;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.btns:hover .filter {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: start;
+  width: fit-content;
+
+  p {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+}
+
 .commentsRightSideBar {
   position: absolute;
   height: 100vh;
@@ -53,5 +89,12 @@
     display: flex;
     gap: 8px;
     align-items: center;
+  }
+}
+
+@media (width >=768px) {
+  .invoiceOverview {
+    display: grid;
+    grid-template-columns: 1fr 14fr;
   }
 }
