--- a/components/invoice-card/style.css
+++ b/components/invoice-card/style.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  box-shadow: 0px 0 10px #48549f1a;
   background-color: white;
   padding: 24px;
   border-radius: 8px;
