--- a/components/header/header.css
+++ b/components/header/header.css
@@ -15,6 +15,7 @@ header {
   width: 19px;
   height: 19px;
 }
+
 .logo {
   margin-right: auto;
   width: 72px;
@@ -32,7 +33,12 @@ header {
   height: 72px;
 }
 
-@media (width >=768px) {
+@media (width >=1024px) {
+  .logo {
+    width: 103px;
+    height: 103px;
+  }
+
   header {
     height: 100vh;
     display: flex;
