--- a/components/invoice-add/style.css
+++ b/components/invoice-add/style.css
@@ -36,6 +36,7 @@
       display: flex;
       gap: 8px;
       align-items: center;
+      cursor: pointer;
     }
   }
 }
@@ -44,10 +45,18 @@
   display: flex;
   align-items: center;
   gap: 64px;
-  a {
+
+  h6 {
     display: flex;
     align-items: center;
     gap: 14px;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: -0.25px;
+    text-align: right;
+    color: #0c0e16;
+    cursor: pointer;
   }
 }
 
@@ -60,6 +69,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .btns:hover .filter {
@@ -89,12 +99,17 @@
     display: flex;
     gap: 8px;
     align-items: center;
+    cursor: pointer;
   }
 }
 
-@media (width >=768px) {
+@media (width >=1024px) {
   .invoiceOverview {
     display: grid;
     grid-template-columns: 1fr 14fr;
+  }
+
+  .btns .filter {
+    top: 45px;
   }
 }
