--- a/components/details/style.css
+++ b/components/details/style.css
@@ -13,7 +13,7 @@ strong {
 p {
   font-size: 13px;
   font-weight: 500;
-  line-height: 15px;
+  line-height: 18px;
   letter-spacing: -0.10000000149011612px;
   text-align: left;
   color: #7E88C3;
@@ -22,6 +22,11 @@ p {
 .grandTotal {
   color: white;
   background-color: #373B53;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px;
+  border-radius: 0 0 8px 8px;
   p {
     color: white;
     font-size: 13px;
@@ -56,8 +61,239 @@ p {
 
 .customerAddress {
   margin-bottom: 32px;
+  display: grid;
+  gap: 4px;
+  strong {
+    margin-bottom: 7px;
+  }
+  
+}
+
+.customerAddress p:first-child {
+  margin-bottom: 13px;
 }
 
 .customerEmail {
   margin-bottom: 38px;
+  p {
+    margin-bottom: 13px;
+  }
+}
+
+.cartSections {
+  display: none;
+}
+
+.cartItemDesktop {
+  display: none;
+}
+
+.cartItem {
+  display: flex;
+  gap: 83px;
+  align-items: center;
+  padding: 24px;
+  p {
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: -0.25px;
+    text-align: left;
+
+  }
+}
+
+.item {
+  display: grid;
+  gap: 8px;
+}
+
+.cart {
+  margin-bottom: 80px;
+}
+
+
+.billDatenAddress {
+  display: flex;
+  gap: 61px;
+  align-items:flex-start;
+}
+
+.dates {
+  display: grid;
+  gap: 31px;
+  p {
+    margin-bottom: 13px;
+  }
+}
+
+.detailsContainer {
+  padding-inline: 24px;
+  max-width: 730px;
+  margin: 0 auto;
+}
+
+.detailsButtons {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 8px;
+}
+
+button {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: -0.25px;
+  text-align: left;
+  color: rgba(126, 136, 195, 1);
+  border: none;
+  padding: 16px;
+  border-radius: 99em;
+  background-color: #F9FAFE;
+  height: 48px;
+}
+
+
+
+button:last-child {
+  color: white;
+  background-color: rgba(124, 93, 250, 1);
+
+}
+
+.detailsButtons button:nth-child(2){
+  color: white;
+  background-color: #EC5757;
+  padding: 16px 25px;
+}
+
+
+.status {
+  display: flex;
+  justify-content: space-between;
+  padding: 37px 0;
+  margin-bottom: 16px;
+  span {
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: -0.25px;
+    text-align: left;
+    color: #FF8F00;
+  }
+}
+
+.return {
+  padding-top: 33px;
+  a {
+    display: flex;
+    align-items:end;
+    gap: 24px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: -0.25px;
+    text-align: left;
+    color: black;
+
+  }
+}
+
+.desktop {
+  display: none;
+}
+
+@media (width>= 768px){
+  .detailsContainer {
+    padding-inline: 32px;
+  }
+  .desktopAdress {
+    display: flex;
+    justify-content: space-between;
+  }
+  .companyAddress p{
+    text-align: right;
+  }
+
+  .desktopAddressMail {
+    display: flex;
+    gap: 117px;
+  }
+  .billDatenAddress{
+    gap: 117px;
+  }
+
+  .cartItem {
+    display: none;
+  }
+
+  .cartSections {
+    display: flex;
+    padding: 32px 32px 0 32px;
+  }
+
+  .cartItemDesktop{
+    display: flex;
+    padding-inline: 32px;
+
+  }
+  .cart {
+    display: grid;
+    gap: 32px;
+    text-align: right;
+  }
+ 
+ 
+  .cartSections p:first-child {
+    margin-right: 217px;
+  }
+
+  .cartSections p:nth-child(2){
+    margin-right: 92px;
+  }
+
+  .cartSections p:nth-child(3){
+    margin-right: 111px;
+  }
+
+  .cartItemDesktop input {
+    border: none;
+    outline: none;
+    padding: 0;
+  }
+
+  .cartItemDesktop input:first-child {
+    margin-right: 190px;
+  }
+
+  .cartItemDesktop input:nth-child(2) {
+    margin-right: -30px;
+  }
+  .cartItemDesktop input:nth-child(3) {
+    margin-right: 60px;
+  }
+  
+  .mobile {
+    display: none;
+  }
+  .desktop {
+    display: flex;
+  }
+
+  .detailsButtons {
+    width: 309px;
+  }
+  .desktopButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .status {
+    gap: 20px;
+    align-items: center;
+  }
+
+
 }
