--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,29 +1,42 @@
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(55, 59, 83, 1);
-  padding-right: 24px;
-  gap: 24px;
+  background-color: #373B53;
+
+  .pageLogo {
+    margin-right: auto;
+  }  
+
+  .darkMode {
+    padding: 24px;
+    border-right: 1px solid #494E6E;
+  }
+
+  .profilePicture {
+    margin: 24px;
+  }
 }
 
-header img:last-child {
-  width: 32px;
-  height: 32px;
-}
-header img:nth-child(2) {
-  width: 19px;
-  height: 19px;
-}
-header img:first-child {
-  margin-right: auto;
-  width: 72px;
-  height: 72px;
-}
+@media (width >= 1440px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    width: 80px;
+    height: 100vh;
+    border-radius: 0px 24px 0px 0px;
 
-.line {
-  border-right: 1px solid rgba(73, 78, 110, 1);
-  height: 72px;
+    .pageLogo {
+      margin-bottom: auto;
+    }  
+  
+    .darkMode {
+      padding: 24px;
+      border-bottom: 1px solid #494E6E;
+    }
+  
+    .profilePicture {
+      margin: 24px;
+    }
+  }
 }
-
-
