--- a/components/invoice-card/style.css
+++ b/components/invoice-card/style.css
@@ -86,3 +86,31 @@
     }
   }
 }
+
+@media (width >=768px) {
+  .cardContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .cardHeader {
+      gap: 32px;
+      justify-content: start;
+    }
+
+    .cardContentGeneral {
+      display: flex;
+      align-items: center;
+      justify-content: start;
+
+      gap: 32px;
+
+      .cardContent {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 32px;
+      }
+    }
+  }
+}
