--- a/components/invoice-add/style.css
+++ b/components/invoice-add/style.css
@@ -5,10 +5,10 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    /* transition: all 1s ease; */
+    transition: all 1s ease;
     width: fit-content;
     padding: 24px;
-  
+
     .backButton {
       display: flex;
       width: 130px;
@@ -34,7 +34,7 @@
       align-items: center;
       margin: 16px 0px;
       margin-inline: 24px;
-  
+
       h2 {
         display: flex;
         flex-direction: column;
@@ -45,7 +45,7 @@
         letter-spacing: -0.75px;
         text-align: left;
         color: #0c0e16;
-  
+
         span {
           font-size: 13px;
           font-weight: 500;
@@ -55,7 +55,7 @@
           color: #888eb0;
         }
       }
-  
+
       button {
         display: flex;
         gap: 8px;
@@ -64,52 +64,51 @@
         height: 44px;
         border-radius: 24px;
         border: none;
-        background-color: #7C5DFA;
-        color: #FFFFFF;
+        background-color: #7c5dfa;
+        color: #ffffff;
         padding: 6px;
       }
     }
   }
 
   .emptyContainer {
-        display: none;
+    display: none;
   }
-      
+
   .invoiceOverview:not(:has(.cardContainer)) {
-        .emptyContainer {
-          display: flex;
-          flex-direction: column;
-          gap: 42px;
-          align-items: center;
-          text-align: center;
-          margin-top: 102px;
-      
-          .emptyTexts {
-            display: flex;
-            flex-direction: column;
-            gap: 32px;
-            align-items: center;
-      
-            h2 {
-              font-size: 24px;
-              font-weight: 700;
-              line-height: 22.08px;
-              letter-spacing: -0.75px;
-              color: #0C0E16;
-            }
-      
-            p {
-              width: 246px;
-              color: #888EB0;
-            }
-          }
+    .emptyContainer {
+      display: flex;
+      flex-direction: column;
+      gap: 42px;
+      align-items: center;
+      text-align: center;
+      margin-top: 102px;
+
+      .emptyTexts {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        align-items: center;
+
+        h2 {
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 22.08px;
+          letter-spacing: -0.75px;
+          color: #0c0e16;
         }
+
+        p {
+          width: 246px;
+          color: #888eb0;
+        }
+      }
+    }
   }
 }
 
 @media (width >= 1440px) {
-  .addInvoiceContainer {  
-    
+  .addInvoiceContainer {
     .invoiceOverview {
       display: flex;
       flex-direction: row;
