--- a/components/details/style.css
+++ b/components/details/style.css
@@ -151,6 +151,7 @@ button {
   border-radius: 99em;
   background-color: #F9FAFE;
   height: 48px;
+  cursor: pointer;
 }
 
 
@@ -335,4 +336,19 @@ button:last-child {
   }
 
 
+}
+
+@media (width >= 1440px) {
+  .detailsButtons button:first-child:hover {
+    background-color: rgba(223, 227, 250, 1);
+    color: rgba(126, 136, 195, 1);
+  }
+
+  .detailsButtons button:nth-child(2):hover {
+    background-color: rgba(255, 151, 151, 1);
+  }
+
+  .detailsButtons button:last-child:hover {
+    background-color: rgba(146, 119, 255, 1);
+  }
 }
