--- a/components/header/header.css
+++ b/components/header/header.css
@@ -33,6 +33,7 @@
     .darkMode {
       padding: 24px;
       border-bottom: 1px solid #494E6E;
+      border-right: 0;
     }
   
     .profilePicture {
