--- a/components/invoice-card/style.css
+++ b/components/invoice-card/style.css
@@ -7,8 +7,9 @@
   background-color: white;
   padding: 24px;
   border-radius: 8px;
-  margin-inline: 24px;
   text-decoration: none;
+  max-width: 730px;
+  margin: 0 auto;
 
   .cardHeader {
     display: flex;
