--- a/components/invoice-add/style.css
+++ b/components/invoice-add/style.css
@@ -112,6 +112,7 @@
 
 dialog {
   width: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   border: none;
@@ -120,6 +121,26 @@ dialog {
   left: 0;
   background: transparent;
   overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+dialog::-webkit-scrollbar {
+  width: 8px;
+}
+
+dialog::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+dialog::-webkit-scrollbar-thumb {
+  background-color: rgb(79, 79, 129);
+  border-radius: 10px;
+  border: 2px solid transparent;
+}
+
+dialog {
+  scrollbar-color: rgb(79, 79, 129) transparent;
+  scrollbar-width: thin;
 }
 
 @media (width >=768px) {
@@ -149,5 +170,6 @@ dialog {
     top: 0;
     left: 80px;
     background: transparent;
+    background-color: red;
   }
 }
