--- a/components/header/header.css
+++ b/components/header/header.css
@@ -2,15 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #373B53;
+  background-color: #373b53;
 
   .pageLogo {
     margin-right: auto;
-  }  
+  }
 
   .darkMode {
     padding: 24px;
-    border-right: 1px solid #494E6E;
+    border-right: 1px solid #494e6e;
   }
 
   .profilePicture {
@@ -18,7 +18,7 @@
   }
 }
 
-@media (width >= 1440px) {
+@media (width >= 768px) {
   .header {
     display: flex;
     flex-direction: column;
@@ -28,14 +28,14 @@
 
     .pageLogo {
       margin-bottom: auto;
-    }  
-  
+    }
+
     .darkMode {
       padding: 24px;
-      border-bottom: 1px solid #494E6E;
+      border-bottom: 1px solid #494e6e;
       border-right: 0;
     }
-  
+
     .profilePicture {
       margin: 24px;
     }
