getclients a istek atıldı

--- a/components/invoice-card/style.css
+++ b/components/invoice-card/style.css
@@ -92,6 +92,11 @@
         background-color: #ff8f0060;
         color: #ff8f00;
       }
+
+      .draft {
+        background-color: #373b5320;
+        color: #373b53;
+      }
     }
   }
 }
