--- a/components/invoice-add/style.css
+++ b/components/invoice-add/style.css
@@ -1,4 +1,4 @@
-.addInvoiceContainer {  
+.addInvoiceContainer {
   .commentsRightSideBar {
     width: 0;
     background: white;
@@ -66,6 +66,7 @@
         color: #ffffff;
         padding: 6px;
         cursor: pointer;
+        z-index: 999999;
       }
     }
 
@@ -78,7 +79,7 @@
     display: none;
   }
 
-  .invoiceOverview:not(:has(.cardContainer)) {
+  .serverFethGeneral:not(:has(.cardContainer)) {
     .emptyContainer {
       display: flex;
       flex-direction: column;
@@ -121,6 +122,7 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    z-index: 99999999999999;
   }
 
   dialog::-webkit-scrollbar {
