--- a/components/header/header.css
+++ b/components/header/header.css
@@ -4,40 +4,16 @@
   align-items: center;
   background-color: #373b53;
 
-  .pageLogo {
+  .page-logo {
     margin-right: auto;
   }
 
-  .darkMode {
+  .dark-mode {
     padding: 24px;
     border-right: 1px solid #494e6e;
   }
 
-  .profilePicture {
+  .profile-picture {
     margin: 24px;
-  }
-}
-
-@media (width >= 768px) {
-  .header {
-    display: flex;
-    flex-direction: column;
-    width: 80px;
-    height: 100vh;
-    border-radius: 0px 24px 0px 0px;
-
-    .pageLogo {
-      margin-bottom: auto;
-    }
-
-    .darkMode {
-      padding: 24px;
-      border-bottom: 1px solid #494e6e;
-      border-right: 0;
-    }
-
-    .profilePicture {
-      margin: 24px;
-    }
   }
 }
