--- a/components/invoice-form/item-list/item-list.css
+++ b/components/invoice-form/item-list/item-list.css
@@ -7,72 +7,14 @@
     text-align: left;
   }
 
-  .items {
+  .form-item {
     display: flex;
     flex-direction: column;
-    gap: 49px;
-
-    .new-item {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 25px 16px;
-      align-items: end;
-      justify-content: space-between;
-
-      .form-item {
-        display: flex;
-        flex-direction: column;
-        gap: 9px;
-
-        input {
-          width: 327px;
-          height: 48px;
-          border: 1px solid #dfe3fa;
-          padding-left: 20px;
-        }
-
-        input::placeholder {
-          color: #0c0e16;
-          font-size: 15px;
-          font-weight: 700;
-          line-height: 15px;
-          letter-spacing: -0.25px;
-        }
-      }
-
-      .form-item:nth-child(2) {
-        input {
-          width: 64px;
-          padding: 5px;
-        }
-      }
-
-      .form-item:nth-child(3) {
-        input {
-          width: 100px;
-        }
-      }
-
-      .form-item:nth-child(4) {
-        input {
-          width: 70px;
-          border: none;
-          color: #888eb0;
-        }
-      }
-
-      button {
-        background-color: transparent;
-        border: none;
-        flex-grow: 0;
-        flex-shrink: 0;
-        margin-bottom: 12px;
-        color: #888eb0;
-      }
-    }
+    gap: 9px;
   }
 
   .add-new-button {
+    width: 100%;
     font-size: 15px;
     font-weight: 700;
     line-height: 15px;
@@ -83,76 +25,10 @@
     border: none;
     color: #7e88c3;
     background-color: #F9FAFE;
-    transition: background-color 0.5s ease;
-  }
+    transition: background-color 0.8s ease;
 
-  .add-new-button:hover {
-    background-color: #dfe3fa;
-  }
-}
-
-@media (width >= 768px) {
-  .item-list {
-    width: 616px;
-    padding: 56px;
-
-    h3 {
-      font-size: 18px;
-      font-weight: 700;
-      line-height: 32px;
-      letter-spacing: -0.375px;
-      text-align: left;
-    }
-
-    .items {
-      gap: 18px;
-      padding: 14px 0px 49px 0px;
-
-      .new-item {
-        gap: 0px;
-
-        .form-item {
-          gap: 15px;
-
-          input {
-            width: 214px;
-            height: 48px;
-            border: 1px solid #dfe3fa;
-          }
-
-          input::placeholder {
-            color: #0c0e16;
-            font-size: 15px;
-            font-weight: 700;
-            line-height: 15px;
-            letter-spacing: -0.25px;
-            text-align: left;
-          }
-        }
-
-        .form-item:nth-child(2) {
-          input {
-            width: 46px;
-          }
-        }
-
-        .form-item:nth-child(3) {
-          input {
-            width: 100px;
-          }
-        }
-
-        .form-item:nth-child(4) {
-          input {
-            padding: 0;
-            width: 50px;
-          }
-        }
-      }
-    }
-
-    .add-new-button {
-      width: 504px;
+    &:hover {
+      background-color: #dfe3fa;
     }
   }
 }
