--- a/components/header/header.css
+++ b/components/header/header.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #373b53;
+  height: 100%;
 
   .page-logo {
     margin-right: auto;
@@ -18,7 +19,7 @@
   }
 }
 
-@media(width >= 1110px) {
+@media (width >= 1110px) {
   .header {
     flex-direction: column;
     width: 80px;
@@ -28,7 +29,7 @@
     .page-logo {
       margin-bottom: auto;
     }
-  
+
     .dark-mode {
       border-bottom: 1px solid #494e6e;
     }
